Final changes are made
